# uuid-generator-mcp

./: README.md  app.py  ersmichaOneDrivePulpitMCPuuid-generator-mcp; git diff --staged  main.py  pyproject.toml  run.sh
.cursor/commands/: commit-gh.md  generate-readme.md
.cursor/rules/: fromat-text.mdc
